--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <!-- Bootstrap core CSS -->
     <link href="./bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="./css/style.css" rel="stylesheet">
+    <link href="./css/chat-box.css" rel="stylesheet">
 
     <link href="./bower_components/ng-img-crop/compile/unminified/ng-img-crop.css" rel="stylesheet">
 
