change in chat box

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link href="./css/chat-box.css" rel="stylesheet">
 
     <link href="./bower_components/ng-img-crop/compile/unminified/ng-img-crop.css" rel="stylesheet">
+    <!-- <link href="./bower_components/angular-bootstrap/ui-bootstrap-csp.css" rel="stylesheet"> -->
 
     <!-- Required js -->
     <script src="./bower_components/jquery/dist/jquery.min.js"></script>
@@ -22,6 +23,8 @@
     <script src="./bower_components/angularfire/dist/angularfire.min.js"></script>
     <script src="./bower_components/ng-img-crop/compile/unminified/ng-img-crop.js"></script>
     <script src="./bower_components/ng-file-upload/ng-file-upload.min.js"></script>
+    <!-- <script src="./bower_components/angular-bootstrap/ui-bootstrap.min.js"></script>
+    <script src="./bower_components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script> -->
 
     <script src="./js/app.js"></script>
     <!-- Controllers -->
@@ -29,6 +32,7 @@
     <script src="./js/controllers/loginController.js"></script>
     <script src="./js/controllers/homeController.js"></script>
     <script src="./js/controllers/registrationController.js"></script>
+    <script src="./js/controllers/chat-popupController.js"></script>
 
     <!-- Services -->
     <script src="./js/services/authService.js"></script>
